# microservice_architecture

./: README.md  auth-deploy.yaml  service.yaml
python/src/auth/: Dockerfile  init.sql  pyproject.toml  requirements.txt  server.py
python/src/auth/manifests/: secret.yaml
python/src/gateway/: server.py
python/src/gateway/auth_svc/: access.py
