[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Marek Wyszyński <45630165+gitgeoman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"
jedi = "^0.19.1"
pyjwt = "^2.8.0"
flask = "^3.0.2"
flask-mysqldb = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
